# Karkinos

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.en.md  README.md  README.zh.md  SECURITY.md  broker_statement.template.csv  config.example.json  config.py  design.md  docker-compose.yml  live.py  main.py  package-lock.json  pyproject.toml  secret.example.py
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-branches.yml
account_truth/: __init__.py  broker_adapter_conformance.py  broker_adapter_conformance_fixtures.py  broker_adapter_release.py  broker_connector.py  broker_connector_evidence.py  broker_evidence.py  broker_execution_edge_conformance.py  broker_execution_edge_conformance_fixtures.py  broker_order_lifecycle.py  broker_order_lifecycle_collector.py  broker_statement.py  broker_statement_collector.py  manual_review.py  reconciliation.py  score.py
account_truth/adapters/: __init__.py  legacy_qmt_order_lifecycle_v1.py
analytics/: __init__.py  acceptance_audit.py  acceptance_audit_report.py  acceptance_audit_verification.py  backtest_metrics.py  benchmark_fixtures.py  dataset_snapshot.py  equity.py  metrics.py  oos_validation.py  report.py  research_evidence.py  shadow_review.py  strategy_broker_boundary.py  strategy_promotion_readiness.py  strategy_signal_preview.py  strategy_validation_matrix.py  sweep_robustness.py
backtest/: __init__.py  engine.py  result.py  viewer.py
cli/: live.py
core/: __init__.py  clock.py  event_bus.py  events.py  types.py
data/: __init__.py  features.py  handler.py  live.py  manager.py  market_calendar.py  market_data.py  market_data_reconciliation.py  market_data_refresh.py  market_data_replay.py  source.py  store.py
data/providers/: __init__.py  akshare_source.py  demo_source.py  tushare_source.py
docs/: ARCHITECTURE.md  ARCHITECTURE.zh.md  BENCHMARKS.md  BENCHMARKS.zh.md  BROKER_CONNECTOR_SOAK_RUNBOOK.md  CONTROLLED_EXECUTION_PLAN.md  CONTROLLED_EXECUTION_PLAN.zh.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_LOG.zh.md  KARKINOS_GOAL.md  KARKINOS_GOAL.zh.md  README.en.md  README.zh.md  ROADMAP.md  ROADMAP.zh.md  account-truth-import.en.md  account-truth-import.zh.md  broker-adapter-conformance.en.md  broker-adapter-conformance.zh.md  broker-adapter-release-review.en.md  broker-adapter-release-review.zh.md  broker-execution-edge-conformance.en.md  broker-execution-edge-conformance.zh.md  broker-order-lifecycle-ingestion.en.md  broker-order-lifecycle-ingestion.zh.md  config-reference.en.md  config-reference.zh.md  controlled-broker-cancellation.en.md  controlled-broker-cancellation.zh.md  operator-approval-signing.md  operator-approval-signing.zh.md  qmt-order-lifecycle-import.zh.md  return-accounting.en.md  return-accounting.zh.md
docs/strategy/: README.en.md  README.zh.md
domain/: __init__.py  bar.py  fill.py  instrument.py  order.py  portfolio.py  position.py  tick.py
execution/: __init__.py  broker.py  commission.py  connector.py  engine.py  gateway.py  paper_broker.py  simulator.py  slippage.py  tracker.py
notification/: __init__.py  console.py  notifier.py  telegram.py  wechat.py
risk/: __init__.py  limits.py  manager.py  pre_trade.py  rules.py
scripts/: backtest_byd.py  check_docs_health.py  configure_data_source.py  demo_phase1_pipeline.py  export_acceptance_audit.py  import_broker_order_lifecycle.py  import_qmt_order_lifecycle.py  ingest_broker_order_lifecycle_collector_batch.py  migrate_legacy_qmt_order_lifecycle.py  operator_signer.py  review_broker_adapter_release.py  run_broker_adapter_conformance.py  run_broker_execution_edge_conformance.py  start_server.sh  stop_server.sh  sync_market_bars_to_db.py  verify_docker_runtime.py  verify_market_bars.py
server/: __init__.py  __main__.py  account_truth_gate.py  app.py  bootstrap.py  bridge.py  config.py  config_contract.py  db.py  dependencies.py  models.py  scheduler.py
server/ai_runtime/: __init__.py  analysis_reviews.py  capture.py  contracts.py  evidence.py  external_analysis_reviews.py  external_memory_informed_analysis.py  external_promoted_analysis_memory.py  external_promoted_analysis_memory_retrieval.py  external_research.py  store.py  (+16 more)
strategy/: __init__.py  base.py  registry.py  runtime.py  schema.py  signals.py
tests/: conftest.py  route_assertions.py  test_acceptance_audit.py  test_acceptance_audit_cli.py  test_acceptance_audit_verification.py  test_automation_alerts.py  test_automation_cockpit.py  test_automation_control.py  test_bootstrap.py  test_broker_connector_soak.py  test_broker_connector_soak_promotion.py  test_broker_connector_soak_runbook.py  test_broker_gateway_service.py  test_broker_lifecycle_evidence_view.py  test_capital_authorization.py  test_capital_authorization_audit.py  test_capital_scaling_evidence_resolution.py  test_capital_scaling_evidence_window.py  test_capital_scaling_review.py  test_ci_safety_workflow.py  test_ci_workflow.py  test_controlled_broker_cancellation.py  test_controlled_broker_rejection_evidence.py  test_controlled_broker_submission.py  test_controlled_broker_write_release.py  test_controlled_execution_operator_view.py  test_controlled_session_automatic_pause.py  test_controlled_session_budget_reservation.py  test_controlled_session_envelope.py  test_controlled_session_live_gates.py  test_controlled_session_runtime_authority.py  test_controlled_session_runtime_rate_limiter.py  test_controlled_submission_ledger_correction.py  test_controlled_submission_ledger_posting_fault_injection.py  test_controlled_submission_reconciliation_clearance.py  test_current_holding_market_evidence_review.py  test_current_per_order_dossier.py  test_daily_operations.py  test_daily_trading_plan.py  test_data_health.py  (+28 more)
tools/: __init__.py  live_monitor.py  run_backtest.py
utils/: date_utils.py  decorators.py  logger.py  math_utils.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+521 files in other folders)
