[project]
name = "karkinos"
version = "0.1.0"
description = "面向中国市场的个人量化投研与交易平台"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "tushare>=1.4.29",
    "pandas>=3.0.3",
    "numpy>=2.5.1",
    "pyarrow>=25.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pip-audit==2.10.1",
    "pre-commit>=4.6.0",
    "isort>=8.0.1",
    "black>=26.5.1",
]
server = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "python-dotenv>=1.2.2",
    "aiosqlite>=0.22.1",
    "websockets>=16.1.1",
    "pydantic>=2.13.4",
]

[tool.setuptools.packages.find]
include = [
    "core", "core.*",
    "domain", "domain.*",
    "data", "data.*",
    "strategy", "strategy.*",
    "execution", "execution.*",
    "risk", "risk.*",
    "backtest", "backtest.*",
    "analytics", "analytics.*",
    "account_truth", "account_truth.*",
    "notification", "notification.*",
    "server", "server.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast deterministic unit and service-level tests",
    "api_contract: API, persistence, and route contract tests",
    "acceptance: release-review and goal acceptance tests",
    "trading_safety: fail-closed trading authority and financial-integrity tests",
    "slow: deterministic tests that intentionally exercise timeout or wait behavior",
]

[dependency-groups]
dev-dependencies = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pip-audit==2.10.1",
    "pre-commit>=4.6.0",
    "isort>=8.0.1",
    "black>=26.5.1",
]

# === isort 配置 ===
# 与 black 兼容的关键设置
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["core", "domain", "data", "strategy", "execution", "risk", "backtest", "analytics", "account_truth", "server"]

# === black 配置 ===
[tool.black]
line-length = 88
target-version = ["py312"]

[tool.coverage.run]
source = [
    "core",
    "domain",
    "data",
    "strategy",
    "execution",
    "risk",
    "backtest",
    "analytics",
    "account_truth",
    "notification",
    "server",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "reports/ci/coverage.xml"
